<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CyberDeck</string>
    <string name="title_card_detail">Card Detail</string>
    <string name="card_image">Card Image</string>
    <string name="faction_image">Faction Image</string>
    <string name="title_activity_deck">Deck Detail</string>
    <string name="action_settings">Settings</string>
    <string name="card_library">Card Library</string>
    <string name="new_deck">New Deck&#8230;</string>
    <string name="title_activity_new_deck_wizard">New Deck</string>
    <string name="deck_name">Deck Name</string>
    <string name="identity">Identity</string>
    <string name="create_deck_label">Create&#8230;</string>
    <string name="add_cards">&#xf055;</string>
    <string name="title_activity_deck_list">Deck List</string>
    <string name="deckList">Deck List</string>
    <string name="removeCard">Remove</string>
    <string name="addDeck">New Deck&#8230;</string>
    <string name="removeAll">Remove all</string>
    <string name="deleteDeck">Delete deck</string>
    <string name="title_activity_card_gallery">Gallery</string>
    <string name="copy">Netrunner is a TM of R. Talsorian Games, Inc. Android is TM &amp; ©2012 Fantasy Flight Publishing, Inc. \nAll rights reserved. Netrunner is licensed by Wizards of the Coast LLC. ©2012 Wizards.</string>
    <string name="title_activity_deck_detail">Deck Detail</string>
	<string name="reputation_dot">&#xf111;</string>
	<string name="zero_percent">0%</string>
    <string name="dummyText">dummyText</string>
</resources>
