<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".presentation.activity.WelcomeActivity" >

    <Button
        android:id="@+id/button_deck_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_new_deck"
        android:layout_alignRight="@+id/button_new_deck"
        android:layout_below="@+id/button_new_deck"
        android:layout_marginTop="26dp"
        android:text="@string/deckList" />

    <Button
        android:id="@+id/button_new_deck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_library"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/new_deck" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="@string/copy" />

    <Button
        android:id="@+id/button_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_new_deck"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:text="@string/card_library" />

</RelativeLayout>
