<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".presentation.activity.NewDeckActivity" >

    <Spinner
        android:id="@+id/deck_identity_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/field_deck_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:prompt="@string/identity" />

    <EditText
        android:id="@+id/field_deck_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/deck_name"
        android:inputType="text" />

    <Button
        android:id="@+id/create_deck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/deck_identity_spinner"
        android:layout_marginBottom="43dp"
        android:layout_marginRight="17dp"
        android:text="@string/create_deck_label" />

</RelativeLayout>